--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
             reprehenderit consequuntur sapiente, ab omnis.
         </p>
         <h3>Seccion 1.1</h3>
-        <h2>Capitulo 2</h2>
+        <h2>Ejerccicos en clase</h2>
+        <p>
+            <a href="primer_script.html">Primer Srcript HTML y enlaces</a>
+        </p>
+        <h2>Club Hoja verde</h2>
+        <p>
+            <a href="tech_for_eco/fire_fighters_dron.html">Drones bomberos</a>
+        </p>
         <!--
         no hay que hacer mas comentarios
         -->
