--- a/primer_script.html
+++ b/primer_script.html
@@ -5,8 +5,17 @@
         <meta charset="utf-8" />
     </head>
     <body>
-        <h1>Titulo de HTLM</h1>
-        <h2>Capitulo 1</h2>
+        <h1 id="inicio">Titulo de HTLM</h1>
+        <p>
+            <a href="#capitulo1">Calpitulo 1</a><br>
+            <a href="#capitulo2">Calpitulo 2</a><br>
+            <a href="#capitulo3">Calpitulo 3</a><br>
+            <a href="#capitulo4">Calpitulo 4</a><br>
+            <a href="#capitulo5">Calpitulo 5</a><br>
+            <a href="#capitulo6">Calpitulo 6</a>
+        </p>
+        <a href="index.html">Ir a Home</a><br><!--hipervinculo relativo 3 -->
+        <h2 id="capitulo1">Capitulo 1</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi velit perferendis voluptates 
             alias recusandae amet id quidem saepe harum blanditiis sunt veritatis ex soluta similique, 
@@ -23,9 +32,53 @@
             reprehenderit consequuntur sapiente, ab omnis.
         </p>
         <h3>Seccion 1.1</h3>
-        <h2>Capitulo 2</h2>
+        <a href="#inicio">inicio</a>
+        <h2 id="capitulo2">Capitulo 2</h2>
+        <p></p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi velit perferendis voluptates 
+            alias recusandae amet id quidem saepe harum blanditiis sunt veritatis ex soluta similique, 
+            reprehenderit consequuntur sapiente, ab omnis.
+        </p>
+        <a href="#inicio">inicio</a>
+        <h2 id="capitulo3">Capitulo 3</h2>
+        <p></p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi velit perferendis voluptates 
+            alias recusandae amet id quidem saepe harum blanditiis sunt veritatis ex soluta similique, 
+            reprehenderit consequuntur sapiente, ab omnis.
+        </p>
+        <a href="#inicio">inicio</a>
+        <h2 id="capitulo4">Capitulo 4</h2>
+        <p></p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi velit perferendis voluptates 
+            alias recusandae amet id quidem saepe harum blanditiis sunt veritatis ex soluta similique, 
+            reprehenderit consequuntur sapiente, ab omnis.
+        </p>
+        <a href="#inicio">inicio</a>
+        <h2 id="capitulo5">Capitulo 5</h2> <!-- Navegacion en un mismo documento (ANCLAS)-->
+        <p></p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi velit perferendis voluptates 
+            alias recusandae amet id quidem saepe harum blanditiis sunt veritatis ex soluta similique, 
+            reprehenderit consequuntur sapiente, ab omnis.
+        </p>
+        <a href="#inicio">inicio</a>
+        <h2 capitulo6 id="capitulo6">Capitulo 6</h2>
+        <p></p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi velit perferendis voluptates 
+            alias recusandae amet id quidem saepe harum blanditiis sunt veritatis ex soluta similique, 
+            reprehenderit consequuntur sapiente, ab omnis.
+        </p>
+        <a href="#inicio">inicio</a>
         <!--
-        no hay que hacer mas comentarios
+        no hay que hacer mas comentarios HAY 3 HIPERBINCULOS ANCLA,RELATIVOS O ABSOLUTOS y manejan exactamente la misma estructura 
+        lo que cambia es como definimos el enlace 
+        cuando defino los valores en un atrivuto todos los espacips son significativos como mejor practica
+        
+        recurso cualquier otro aset digital 
+        dominio: dentro de mi mismo servidor / carpeta de archivos 
+        existen assets que estan en otro servidor 
+        
+        los enlaces relativos y absolutos buscan a recursos externos o en nuestro dominio
         -->
+         <!-- -->
     </body>  
 </html>
