--- a/primer_script.html
+++ b/primer_script.html
@@ -5,17 +5,23 @@
         <meta charset="utf-8" />
     </head>
     <body>
+        <header>
+
+        
         <h1 id="inicio">Titulo de HTLM</h1>
-        <p>
-            <a href="#capitulo1">Calpitulo 1</a><br>
-            <a href="#capitulo2">Calpitulo 2</a><br>
-            <a href="#capitulo3">Calpitulo 3</a><br>
-            <a href="#capitulo4">Calpitulo 4</a><br>
-            <a href="#capitulo5">Calpitulo 5</a><br>
-            <a href="#capitulo6">Calpitulo 6</a>
-        </p>
+            <nav>
+                <li><a href="#capitulo1">Calpitulo 1</a></li>
+                <li><a href="#capitulo2">Calpitulo 2</a></li>
+                <li><a href="#capitulo3">Calpitulo 3</a></li>
+                <li><a href="#capitulo4">Calpitulo 4</a></li>
+                <li><a href="#capitulo5">Calpitulo 5</a></li>
+                <li><a href="#capitulo6">Calpitulo 6</a></li>
+            </nav>
         <a href="index.html">Ir a Home</a><br><!--hipervinculo relativo 3 -->
-        <h2 id="capitulo1">Capitulo 1</h2>
+    </header>
+    <main>
+        <section id="capitulo1">
+        <h2 >Capitulo 1</h2>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi velit perferendis voluptates 
             alias recusandae amet id quidem saepe harum blanditiis sunt veritatis ex soluta similique, 
@@ -31,6 +37,7 @@
             alias recusandae amet id quidem saepe harum blanditiis sunt veritatis ex soluta similique, 
             reprehenderit consequuntur sapiente, ab omnis.
         </p>
+    </section>
         <h3>Seccion 1.1</h3>
         <a href="#inicio">inicio</a>
         <h2 id="capitulo2">Capitulo 2</h2>
@@ -68,6 +75,12 @@
             reprehenderit consequuntur sapiente, ab omnis.
         </p>
         <a href="#inicio">inicio</a>
+        <article>
+            <h1>amenos de que hagamos un blog</h1>
+            <div></div>
+            <span></span>
+        </article>
+    
         <!--
         no hay que hacer mas comentarios HAY 3 HIPERBINCULOS ANCLA,RELATIVOS O ABSOLUTOS y manejan exactamente la misma estructura 
         lo que cambia es como definimos el enlace 
@@ -80,5 +93,12 @@
         los enlaces relativos y absolutos buscan a recursos externos o en nuestro dominio
         -->
          <!-- -->
-    </body>  
+    </body>
+</main>
+<aside>
+    <p>Cualquier contienido sin relevancia <br> con el documento</p>
+</aside>
+    <footer>
+        &copy; Todos Derechos Reservados 2024 ICC SCJ
+    </footer>  
 </html>
