--- a/tech_for_eco/fire_fighters_dron.html
+++ b/tech_for_eco/fire_fighters_dron.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Drones Bomberos</h1>
     <a href="../index.html">ir a Home</a> <br>
-    <a href="../primer_script.html#capitulo6">PrimerSrcipt</a> <br>
+    <a href="../primer_script.html#capitulo6">PrimerSrcipt</a> <br><!--Especificamente desde atras-->
     <a href="../tech_for_mnt/herd_tracking_beacon.html">Herd Traking</a><br>
     <a href="https://drones.measurusa.com/blogs/news/drones-in-firefighting"target="_blank">Drones pagina oficial</a>
 </body>
