--- a/multimedia.html
+++ b/multimedia.html
@@ -15,5 +15,21 @@
         <source srcset="images/Ed_Desktop.jpg" media="(min-width:720px)">
         <img src="images/mobil.jpg" alt="Retrato">
     </picture>
+
+    <img src="images/hipo.svg" alt="Vector">
+
+    <h2>Video y Audio</h2>
+    <h3>Video</h3>
+    <video controls autoplay loop>
+        <source srcset="media/mov_bbb.ogg" type="video/ogg">
+        <source src="media/mov_bbb.mp4" type="video/mp4">
+    </video>
+    <h3>Audio</h3>
+    <audio controls autoplay loop>
+        <source srcset="media/horse.mp3" type="audio/mp3">
+        <source src="media/horse.ogg" type="video/ogg">
+    </audio>
+
+    
 </body>
 </html>
